--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "formik": "^2.4.6",
     "hero-slider": "^3.2.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.1",
