--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "hero-slider": "^3.2.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
