--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animaciones-moreno": "file:",
     "formik": "^2.4.6",
     "hero-slider": "^3.2.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
-    "react-credit-cards-2": "^1.0.2",
+    "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
