--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "animaciones-moreno": "file:",
     "formik": "^2.4.6",
     "hero-slider": "^3.2.1",
+    "puppeteer": "^23.6.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-grid-gallery": "^1.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
@@ -28,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-sitemap": "sitemap-generator.js"
   },
   "eslintConfig": {
     "extends": [
